fix code snippet readability

--- a/.vuepress/styles/index.scss
+++ b/.vuepress/styles/index.scss
@@ -8,7 +8,7 @@
   // background colors
   --c-bg: #ffffff;
   --c-bg-light: #f3f4f5;
-  --c-bg-lighter: #eeeeee;
+  --c-bg-lighter: #dfe2e5;
   --c-bg-navbar: var(--c-bg);
   --c-bg-sidebar: var(--c-bg);
   --c-bg-arrow: #cccccc;
@@ -142,7 +142,7 @@ html.dark {
   // background colors
   --c-bg: #22272e;
   --c-bg-light: #2b313a;
-  --c-bg-lighter: #262c34;
+  --c-bg-lighter: #34404c;
 
   // text colors
   --c-text: #adbac7;
